--- a/src/assets/scss/elements/_header.scss
+++ b/src/assets/scss/elements/_header.scss
@@ -34,7 +34,7 @@ header {
           opacity: 0.2;
           position: absolute;
           left: 0;
-          content: "";
+          content: '';
           top: 50%;
           transform: translateY(-50%);
         }
@@ -61,7 +61,7 @@ header {
         left: 0;
         width: 100%;
         height: 50%;
-        content: "";
+        content: '';
         position: absolute;
         background-color: #fff;
       }
@@ -222,7 +222,7 @@ header {
         background-color: $theme-color;
         position: absolute;
         left: 0;
-        content: "";
+        content: '';
         top: 13px;
 
         @media (max-width: 1199px) {
@@ -276,14 +276,13 @@ header {
 
     .container-fluid {
       padding: 0;
-      padding-right: 40px;
     }
 
     .logo {
       display: inline-block;
       position: relative;
       padding: 30px;
-      padding-left: 40px;
+      padding-left: 20px;
 
       @media (max-width: 991px) {
         padding: 20px !important;
@@ -300,7 +299,7 @@ header {
         right: 0;
         top: 0;
         background-color: $theme-color-2;
-        content: "";
+        content: '';
 
         @media (max-width: 1320px) {
           height: 100%;
@@ -463,7 +462,7 @@ header {
 
     &::before {
       position: absolute;
-      content: "";
+      content: '';
       height: 100%;
       background: $theme-color;
       width: 620px;
@@ -693,7 +692,7 @@ header {
       position: absolute;
       width: 200%;
       height: 100%;
-      content: "";
+      content: '';
       background: $second-color-dark;
       top: 0;
       left: 0;
@@ -744,7 +743,7 @@ header {
     li + li {
       &::before {
         color: #c5c2c2;
-        content: "|";
+        content: '|';
       }
     }
   }
