--- a/src/assets/scss/default/_variables.scss
+++ b/src/assets/scss/default/_variables.scss
@@ -16,8 +16,8 @@ $secondary: #f47102;
 // Theme Color - Defualt Colors
 $textcolor: #777;
 $section-bg: #f6f6f6;
-$theme-color: #ffc54f;
-$theme-dark: #febc35;
+$theme-color: #00ff62;
+$theme-dark: #00ff62;
 $second-color: #001659;
 $second-color-dark: #000b2c;
 $theme-color-1: #ff9a6b;
